--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 			<h1>Bricks</h1>
 		</header>
 			<section id="content">
-				<canvas id="VirtualPet" data-processing-sources="VirtualPet.pde">
+				<canvas id="Bricks" data-processing-sources="Bricks.pde">
 				</canvas>
 		    </section>
 	    <footer>
