--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 	</head>
 	<body>
 		<header>
-			<h1>Faye's Virtual Cardinal</h1>
+			<h1>Bricks</h1>
 		</header>
 			<section id="content">
-				<canvas id="VirtualPet" data-processing-sources="VirtualPet.pde">
+				<canvas id="Bricks" data-processing-sources="Bricks.pde">
 				</canvas>
 		    </section>
 	    <footer>
-		    Faye Yang APCSA Block 3
+		    Faye Yang 
 	    </footer>
 	</body>
 </html>
